* Fixed: JavaScript issues in the admin, when theme welcome message is present.
* Fixed: Isotope filtering not working with post lists.
* Fixed: Background video not working on individual columns from the layout builder.
* Fixed: Line, Bar, Pie and Doughnut charts not working.
* Fixed: Option type `button` not showing labels for colors being chosen.

--------------------------------------------------------------

## 2.2.1 - 01/22/2018

* **Updated Theme Blvd framework to 2.7.1**
* Improvement: Added FontAwesome v4 shim; use `add_filter( 'themeblvd_icon_shims', '__return_true' );` in your child theme to get v4 icon names working until you can update them all to be compatible with FontAwesome v5.
* Improvement: Customized `angle-*` solid FontAwesome icons to be thinner; this gets the main navigation submenu indicator icons looking more how they did previously.
* Improvement: When using the [Theme Blvd Shortcodes](https://wordpress.org/plugins/theme-blvd-shortcodes/) plugin, the "Add Shortcode" button has been added to the new framework rich-text editors, used in the layout builder.
* Improvement: If deemed to be a "major upgrade" theme updates will now display a notice which includes helpful information about [updating responsibly](http://themeblvd.com/links/update-responsibly).
* Improvement: Added back `themeblvd_responsive_menu_toggle()` as a deprecated function to avoid fatal errors, if being used in a child theme.
* Improvement: Added back `themeblvd_slider()` as a deprecated function to avoid fatal errors for those still using the Theme Blvd Sliders plugin; the function does nothing except output a message when `WP_DEBUG` is enabled.
* Fixed: Publish dates in "time ago" format showing, "0 seconds ago."
* Fixed: Text logo not centering when "Center Logo" is checked with Super User and Executive bases.
* Fixed: "Delete All Icons" button not working when configuring contact links.